# b2b-credit-service

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  data.json  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/api/: apps.py  mixins.py  urls.py
app/authentication/: apis.py  serializers.py  services.py  urls.py
app/core/: admin.py  apps.py  models.py
app/core/migrations/: 0001_initial.py  0002_alter_baseuser_options.py
app/credits/: admin.py  apps.py  exceptions.py  models.py  permissions.py  urls.py
app/credits/apis/: increase_balance.py  organization.py  transfer.py
app/credits/migrations/: 0001_initial.py  0002_remove_transfertransaction_sender_and_more.py  0003_organization_phone.py  0004_transfertransaction_sender_and_more.py  0005_alter_increasebalancetransaction_receiver.py  0006_customer_alter_increasebalancetransaction_options_and_more.py  0007_alter_increasebalancetransaction_receiver.py  0008_alter_customer_credit.py  0009_remove_organization_phone.py  0010_alter_transfertransaction_receiver.py  0011_rename_receiver_transfertransaction_customer_and_more.py
app/credits/serializers/: increase_balance.py  organization.py  transfer.py
app/credits/services/: increase_balance.py  organization.py  transfer.py
app/credits/tests/: conftest.py  factories.py  (+2 more)
b2b_credit_service/api/: apps.py  urls.py
b2b_credit_service/credits/: apps.py
config/: env.py  settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
locust/: locustfile.py
locustfiles/: transfer.py
scripts/: web_entrypoint.sh
(+1 files in other folders)
